--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "framer-motion": "^11.3.2",
     "git": "^0.1.5",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
@@ -36,7 +39,7 @@
     "react-spinners": "^0.14.1",
     "resend": "^3.4.0",
     "styled-components": "^6.1.11",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
